# albert-tchap

./: .coveragerc  .dev.env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prod.env  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  renovate.json  setup.cfg
.github/workflows/: build_and_deploy.yml  prod.yml  staging.yml
.reuse/: dep5
LICENSES/: MIT.txt
app/: .env.example  __init__.py  __main__.py  albert.py  albert_client.py  bot.py  bot_msg.py  commands.py  config.py  core_llm.py  iam.py  pyalbert_utils.py  pyproject.toml  tchap_utils.py  test_tchap_utils.py  utils.py
app/matrix_bot/: auth.py  bot.py  callbacks.py  client.py  config.py  eventparser.py  room_utils.py
app/tests/: conftest.py  test_bot.py  test_check.py  test_pyalbert.py
scripts/: dump_users_state.py  send_msg_to_errors.py  update_users_table.py
src/matrix_bot/: __init__.py  auth.py  bot.py  callbacks.py  client.py  config.py  eventparser.py  room_utils.py
src/tchap_bot/: __init__.py  __main__.py  bot.py  commands.py  config.py  tchap_utils.py
tests/: __init__.py  test_check.py
