[project]
name = "albert-tchapbot"
version = "0.1"
description = "Albert Tchap Bot"
authors = [
    {name = "Etalab", email = "etalab@mail.numerique.gouv.fr"},
]
requires-python = ">= 3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pillow>=10.2.0",
    "markdown>=3.6",
    "requests>=2.31.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "matrix[e2e]>=3.0.0",
]

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
llama-index = "^0.9.15.post2"
