[project]
name = "albert-tchapbot"
version = "0.1.2"
description = "Albert Tchap Bot"
authors = [
    { name = "Pôle d'Expertise de la Régulation Numérique", email = "contact.peren@finances.gouv.fr" },
    { name = "Etalab", email = "etalab@modernisation.gouv.fr" },
]

requires-python = ">= 3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pillow==10.2.0",
    "markdown==3.6",
    "requests==2.31.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "matrix-nio[e2e]==0.24.0",
    "cryptography==42.0.5",
    "structlog==24.1.0",
]

[tool.pdm]
distribution = false
dev-dependencies = { dev = ["ruff==0.4.4"] }

[tool.rye]
dev-dependencies = ["ruff==0.4.4"]

[tool.ruff]
line-length = 100
lint = { ignore-init-module-imports = true, select = ["I"] }

[tool.setuptools]
py-modules = []
