[project]
name = "albert-tchapbot"
version = "0.1"
description = "Albert Tchap Bot"
authors = [
    { name = "Pôle d'Expertise de la Régulation Numérique", email = "contact.peren@finances.gouv.fr" },
    { name = "Etalab", email = "etalab@mail.numerique.gouv.fr" },
]

requires-python = ">= 3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pillow>=10.2.0",
    "markdown>=3.6",
    "requests>=2.31.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "matrix-nio[e2e]>=0.24.0",
    "cryptography>=42.0.5",
    "structlog>=24.1.0",
]

[tool]
rye = { dev-dependencies = [
    "ruff>=0.3.7",
] }

[tool.setuptools]
py-modules = []
